[gd_scene load_steps=45 format=2]

[ext_resource path="res://data/characters/sakura.gd" type="Script" id=1]
[ext_resource path="res://graphs/game/characters/sakura/sakura_dmg1.png" type="Texture" id=2]
[ext_resource path="res://graphs/game/characters/sakura/sakura_walk.png" type="Texture" id=3]
[ext_resource path="res://graphs/game/characters/sakura/sakura_fight3.png" type="Texture" id=4]
[ext_resource path="res://graphs/game/characters/sakura/sakura_dmg3.png" type="Texture" id=5]
[ext_resource path="res://graphs/game/characters/sakura/sakura_dmg2.png" type="Texture" id=6]
[ext_resource path="res://graphs/game/characters/sakura/sakura_dmg4.png" type="Texture" id=7]
[ext_resource path="res://graphs/game/characters/sakura/sakura_fight2.png" type="Texture" id=8]
[ext_resource path="res://graphs/game/characters/sakura/sakura_idle.png" type="Texture" id=9]
[ext_resource path="res://graphs/game/characters/sakura/sakura_telp.png" type="Texture" id=10]
[ext_resource path="res://graphs/game/characters/sakura/sakura_spc.png" type="Texture" id=11]
[ext_resource path="res://graphs/game/characters/sakura/sakura_fall.png" type="Texture" id=12]
[ext_resource path="res://graphs/game/characters/sakura/sakura_fight.png" type="Texture" id=13]
[ext_resource path="res://graphs/game/characters/sakura/sakura_jump.png" type="Texture" id=14]
[ext_resource path="res://graphs/game/characters/sakura/sakura_spc2.png" type="Texture" id=15]
[ext_resource path="res://graphs/game/characters/sakura/sakura_spcfast.png" type="Texture" id=16]
[ext_resource path="res://graphs/game/characters/sakura/sakura_retreat.png" type="Texture" id=17]
[ext_resource path="res://graphs/game/characters/sakura/sakura_run.png" type="Texture" id=18]
[ext_resource path="res://graphs/game/characters/sakura/sakura_def.png" type="Texture" id=19]
[ext_resource path="res://graphs/game/characters/sakura/sakura_chack.png" type="Texture" id=20]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.75
bounce = -2.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 11.0
height = 27.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15, 15 )

[sub_resource type="Animation" id=4]
length = 0.04
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player/break:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "break_smoke_effect"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "chack"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player/chack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "mana_effect"
} ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("player/defense:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("player/fight1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 1.0, Vector2( 1, 0 ) ],
"method": "display_damage"
}, {
"args": [  ],
"method": "combo"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("player/damagearea:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 32.9619, -5.40359 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("player/fight2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 1.0, Vector2( 1, 0 ) ],
"method": "display_damage"
}, {
"args": [  ],
"method": "combo"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("player/damagearea:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 29.1794, 1.62108 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("player/fight3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 1.9, Vector2( 6, -3 ) ],
"method": "display_damage"
}, {
"args": [  ],
"method": "combo"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("player/damagearea:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 31.3408, -3.24216 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player/idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=11]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player/jump_down:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=12]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player/jump_up:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=13]
tracks/0/type = "value"
tracks/0/path = NodePath("player/knok1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=14]
tracks/0/type = "value"
tracks/0/path = NodePath("player/knok2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=15]
tracks/0/type = "value"
tracks/0/path = NodePath("player/knok3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=16]
tracks/0/type = "value"
tracks/0/path = NodePath("player/knok4:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=17]
resource_name = "retreat"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("player/retreat:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "enable_move"
} ]
}

[sub_resource type="Animation" id=18]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player/run:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=19]
resource_name = "special1"
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player/special1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 0.8, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ false, Vector2( 40, 0 ) ],
"method": "set_dmg_area_pos"
}, {
"args": [ 2.22, Vector2( 15, -4 ) ],
"method": "display_damage"
}, {
"args": [ 2, Vector2( 27, 18 ) ],
"method": "Create_Effect"
}, {
"args": [ true, Vector2( 0, 0 ) ],
"method": "set_dmg_area_pos"
}, {
"args": [  ],
"method": "enable_move"
} ]
}

[sub_resource type="Animation" id=20]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player/special2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 6, 7, 8, 9, 6 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ 0.5, Vector2( 1, 0 ) ],
"method": "display_damage"
}, {
"args": [ 0.5, Vector2( 1, 0 ) ],
"method": "display_damage"
}, {
"args": [ 0.5, Vector2( 1, 0 ) ],
"method": "display_damage"
}, {
"args": [ 0.5, Vector2( 1, 0 ) ],
"method": "display_damage"
}, {
"args": [ 0.5, Vector2( 1, 0 ) ],
"method": "display_damage"
}, {
"args": [ 0.5, Vector2( 1, 0 ) ],
"method": "display_damage"
}, {
"args": [ 0.5, Vector2( 1, 0 ) ],
"method": "display_damage"
}, {
"args": [ 1.0, Vector2( 1, 0 ) ],
"method": "display_damage"
}, {
"args": [  ],
"method": "enable_move"
} ]
}

[sub_resource type="Animation" id=21]
resource_name = "specialfast"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player/specialfast:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 1.6, Vector2( 7, -3 ) ],
"method": "display_damage"
}, {
"args": [  ],
"method": "enable_move"
} ]
}

[sub_resource type="Animation" id=22]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player/teleport:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "teleport"
}, {
"args": [  ],
"method": "enable_move"
} ]
}

[sub_resource type="Animation" id=23]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player/walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="CircleShape2D" id=24]

[node name="sakura" type="RigidBody2D" groups=[
"character",
]]
mode = 2
physics_material_override = SubResource( 1 )
gravity_scale = 10.0
contacts_reported = 4
contact_monitor = true
linear_damp = 1.0
script = ExtResource( 1 )

[node name="body_shape" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="bodshapeh" type="Area2D" parent="."]
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0
monitorable = false

[node name="shape" type="CollisionShape2D" parent="bodshapeh"]
shape = SubResource( 3 )

[node name="telparea" type="Area2D" parent="."]
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0
monitorable = false

[node name="shape" type="CollisionShape2D" parent="telparea"]
shape = SubResource( 3 )

[node name="animcontrol" type="AnimationPlayer" parent="."]
anims/break = SubResource( 4 )
anims/chack = SubResource( 5 )
anims/defense = SubResource( 6 )
anims/fight1 = SubResource( 7 )
anims/fight2 = SubResource( 8 )
anims/fight3 = SubResource( 9 )
anims/idle = SubResource( 10 )
anims/jump_down = SubResource( 11 )
anims/jump_up = SubResource( 12 )
anims/knok1 = SubResource( 13 )
anims/knok2 = SubResource( 14 )
anims/knok3 = SubResource( 15 )
anims/knok4 = SubResource( 16 )
anims/retreat = SubResource( 17 )
anims/run = SubResource( 18 )
anims/special1 = SubResource( 19 )
anims/special2 = SubResource( 20 )
anims/specialfast = SubResource( 21 )
anims/teleport = SubResource( 22 )
anims/walk = SubResource( 23 )

[node name="player" type="Node2D" parent="."]

[node name="idle" type="Sprite" parent="player"]
texture = ExtResource( 9 )
hframes = 6

[node name="chack" type="Sprite" parent="player"]
visible = false
position = Vector2( 2, 3 )
texture = ExtResource( 20 )
hframes = 6
frame = 5

[node name="walk" type="Sprite" parent="player"]
visible = false
texture = ExtResource( 3 )
hframes = 6

[node name="break" type="Sprite" parent="player"]
visible = false
rotation = -0.191986
texture = ExtResource( 3 )
hframes = 6
frame = 3

[node name="run" type="Sprite" parent="player"]
visible = false
texture = ExtResource( 18 )
hframes = 6

[node name="jump_up" type="Sprite" parent="player"]
visible = false
texture = ExtResource( 14 )
hframes = 2

[node name="jump_down" type="Sprite" parent="player"]
visible = false
texture = ExtResource( 12 )
hframes = 2

[node name="defense" type="Sprite" parent="player"]
visible = false
texture = ExtResource( 19 )

[node name="teleport" type="Sprite" parent="player"]
visible = false
texture = ExtResource( 10 )
offset = Vector2( 3, 0 )
hframes = 2

[node name="retreat" type="Sprite" parent="player"]
visible = false
position = Vector2( -1, 2 )
texture = ExtResource( 17 )

[node name="fight1" type="Sprite" parent="player"]
visible = false
position = Vector2( 0, 2 )
texture = ExtResource( 13 )
offset = Vector2( 5, 0 )
hframes = 4
frame = 2

[node name="fight2" type="Sprite" parent="player"]
visible = false
position = Vector2( -3, -3 )
texture = ExtResource( 8 )
offset = Vector2( 7, 0 )
hframes = 4
frame = 2

[node name="fight3" type="Sprite" parent="player"]
visible = false
position = Vector2( 5, 3 )
texture = ExtResource( 4 )
hframes = 5

[node name="knok1" type="Sprite" parent="player"]
visible = false
position = Vector2( 1, 2 )
texture = ExtResource( 2 )

[node name="knok2" type="Sprite" parent="player"]
visible = false
position = Vector2( -3, 1 )
texture = ExtResource( 6 )
offset = Vector2( 6, 0 )

[node name="knok3" type="Sprite" parent="player"]
visible = false
texture = ExtResource( 5 )
offset = Vector2( 1, 11 )

[node name="knok4" type="Sprite" parent="player"]
visible = false
position = Vector2( 1, -7 )
texture = ExtResource( 7 )
offset = Vector2( 0, 6 )

[node name="special1" type="Sprite" parent="player"]
visible = false
position = Vector2( 5, 1 )
texture = ExtResource( 11 )
hframes = 13

[node name="special2" type="Sprite" parent="player"]
visible = false
position = Vector2( 16, -19 )
texture = ExtResource( 15 )
hframes = 10
frame = 6

[node name="specialfast" type="Sprite" parent="player"]
visible = false
position = Vector2( 7, 2 )
texture = ExtResource( 16 )
hframes = 7
frame = 6

[node name="damagearea" type="Area2D" parent="player"]
visible = false
position = Vector2( 33, 1.621 )
monitorable = false

[node name="damage_shape" type="CollisionShape2D" parent="player/damagearea"]
shape = SubResource( 24 )

[node name="damagearea2" type="Area2D" parent="player"]
visible = false
position = Vector2( -33, 1.621 )
monitorable = false

[node name="damage_shape" type="CollisionShape2D" parent="player/damagearea2"]
shape = SubResource( 24 )

[connection signal="body_entered" from="." to="." method="_on_Naruto_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Naruto_body_exited"]
[connection signal="body_entered" from="bodshapeh" to="." method="_on_bodshapeh_body_entered"]
[connection signal="body_entered" from="telparea" to="." method="_on_bodshapeh_body_entered"]
